<resources>
    <string name="app_name">12CungHoangDao</string>
    <string name="wellcome">Chào mừng bạn\nApp đầu tiên</string>
    <string name="Bat_Dau">Bấm để bắt đầu</string>
    <string name="todo">TODO</string>
    <string name="bach_duong_text">Xem tử vi 12 cung hoàng đạo 2018, Bạch Dương có nhiều xáo động. Vận thế đầu năm không được thuận lợi, giữa năm mọi việc trơn tru, trong khi cuối năm lại có nhiều biến động. Mặc dù năm nay vận thế thăng trầm, nhưng không thể phủ nhận rằng đó là trải nghiệm để tầm nhìn của bạn được mở rộng, bạn thấy yêu cuộc sống và có cách sống tích cực hơn.\n\nDo ảnh hưởng của sao Kim, cung hoàng đạo này có nhu cầu tiêu pha rất lớn vì bạn đề cao sự hưởng thụ vật chất, hào phóng chi tiêu vì thế đây là nguyên nhân bị thâm hụt ngân sách. May mắn thay, năm nay Bạch Dương theo đuổi sự nghiệp một cách tham vọng, bạn luôn muốn tạo sự khác biệt, nhờ đó thúc đẩy sự phát triển sự nghiệp của Bạch Dương. Do đó thu nhập của bạn cũng được cải thiện hơn.\n\nTuy nhiên khi công việc có biến chuyển tốt đẹp cũng là lúc có những biểu hiện không tốt về sức khỏe, tình trạng thể chất không tốt, nguyên nhân có thể do công việc quá bận rộn, mặc dù không đủ thời gian cân bằng nhưng không nên để tình trạng này kéo dài quá lâu mà nên dành thời gian để nghỉ ngơi và tập thể dục đúng cách.\n\nXem tử vi 12 cung hoàng đạo, năm 2018 của Bạch Dương, chuyện tình cảm trong tháng 3 khả quan nhất, bạn có những trải nghiệm vô cùng ngọt ngào của tình yêu và nếu độc thân thì cơ hội cao sẽ tìm thấy một nửa yêu thương trong thời điểm này. Còn lại hầu hết thời gian thì có quá nhiều vấn đề ngăn cản chuyện tình cảm có thể lạnh nhạt, tệ thì dẫn đến chia ly do cảm giác thiếu tin tưởng nhau. Để cải thiện tình hình, cung Bạch Dương và đối phương nên chia sẻ nhiều hơn để thấu hiểu nhu cầu của nhau.\n\nĐiều đáng nói là từ tháng 5 đến tháng 8, 9 và 11, khả năng giao tiếp của bạn được nâng cao, bạn có thể sử dụng khéo léo lợi thế để đạt được một cuộc trao đổi thú vị. Nhờ sự hỗ trợ của sao Hỏa, bạn sẽ rất hạnh phúc khi giao tiếp với người khác, học cách hòa nhập vào cộng đồng mới. Đó là mối quan hệ quan trọng, năm mới, Bạch Dương có cách nhìn nhận mới về các vấn đề, không bị ảnh hưởng quá nhiều bằng lối mòn trong suy nghĩ trước kia.</string>
    <string name="bao_binh_text">Tử vi cung Bảo Bình 2018, sao Thiên Vương ở trong khu vực của Bạch Dương và Kim Ngưu nhưng cách khá xa so với Bảo Bình điều đó đồng nghĩa với việc năm nay không có lợi cho lắm đối với những người thuộc cung hoàng đạo này. \n\nThời điểm đầu năm, sao Kim mang lại cho bạn chút tiền trong ngắn hạn, tuy nhiên số tiền này không mang lại sự giàu có nhưng nếu bạn thể nắm bắt cơ hội đầu tư, may mắn sẽ mang lại cho bạn số tiền lớn hơn. Cơ hội đến thoáng qua, rất chóng vánh, nếu không kịp nắm bắt thì phải chờ đến thời điểm cuối năm.\n\nXem tử vi năm 2018 của Bảo Bình, từ tháng 2, Bảo Bình khá khôn ngoan khi tham gia một dự án tốt nhưng về tổng thể thì việc kinh doanh không được như mong đợi. Có nhiều người soi mói, gặp cấp trên không phù hợp nên hiếm khi có cơ hội thể hiện tài năng. May mắn là bạn có nỗ lực và đóng vai trò cao hơn trong công việc nên tình hình cũng không quá tệ.\n\nTử vi 2018 của 12 cung hoàng đạo, về tình cảm, không có nhiều dấu hiệu khả quan trong những tháng đầu, từ tháng 1 đến tháng 3 những người độc thân đào hoa vượng, có rất nhiều người theo đuổi, nhưng họ vẫn tạo cho bạn cảm giác mơ hồ, dường như họ không thực sự cần bạn. Nửa năm còn lại, Bảo Bình trải qua khá nhiều cảm xúc nhưng hầu hết là không vui.\n\nSức khỏe của bạn không thực sự lý tưởng, mặc dù không bị bệnh nặng hay đau nghiêm trọng nhưng cơ thể trải qua rất nhiều khó chịu, hãy cẩn thận với sức khỏe của mình. Từ đầu đến giữa năm bạn thường có tâm trạng không vui, cần phải học cách thư giãn và giải tỏa áp lực của cuộc sống, đừng đặt tất cả gánh nặng lên vai của mình. Mùa Thu và mùa Đông phải chú ý đến sức khỏe, cố gắng giữ ấm cho cơ thể.\n\nTrong học tập, sao Thủy và sao Kim tác động tích cực ngay từ đầu năm nên thành tích học tập của bạn không quá đáng lo, nếu chăm chỉ và nỗ lực bạn sẽ được đền đáp xứng đáng nhưng trong lúc đó bạn vẫn có nhiều băn khoăn, suy nghĩ.\n\nNăm của sao Hỏa mang lại cho bạn những năng lượng mạnh mẽ, hầu hết các Bảo Bình sẽ chủ động tiếp thu kiến thức, nhưng có một số người học chỉ được những phút đầu sau đó lại bỏ bê. Bạn cần phải điều chỉnh thái độ mới có thể vượt qua áp lực, đạt thành tích tốt.</string>
    <string name="bo_cap_text">Tử vi cung Bọ Cạp 2018 (Hổ Cáp, Thiên Yết), trong năm nay sao Diêm Vương tiếp tục ngự trị tại khu vực công việc của Bọ Cạp truyền cảm hứng cho bạn để tiếp tục cố gắng, nỗ lực. Nhờ đó, tình hình học tập cho đến công việc đều có kết quả đáng kể. Bạn tăng sự kết nối hơn với mọi người, vai trò và vị trí của bạn được công nhận, cảm giác là người quan trọng khiết bạn thực sự rất tự hào, cảm thấy rất hài lòng về bản thân.\n\nSao Diêm Vương ảnh hưởng rất mạnh mẽ khiến công việc lúc lên lúc xuống. Nhưng nhìn chung, mọi việc trơn tru, thuận lợi chỉ đến tháng 9, ảnh hưởng của sao Diêm Vương giảm dần sẽ gây ra một tác động tiêu cực, lúc này bạn phải cẩn thận, không nên có những quyết định quan trọng vào lúc này.\n\nTại nơi làm việc, sao Diêm Vương nghịch hành nhắc nhở bạn cần cẩn thận trong các vấn đề thông tin liên lạc. Nên sống chan hòa với mọi người, duy trì quan hệ tốt đẹp, không nên vì lợi ích riêng mà làm ảnh hưởng tới tiền bạc của người khác. Nếu bạn để cho sự nghi ngờ của họ trỗi dậy, sẽ không hề thuận lợi cho tiến triển công việc của mình trong lai.\n\nXem tử vi 2018 của 12 cung hoàng đạo, năm nay bạn rất nhạy cảm về tiền bạc, khả năng quản lý tiền bạc được cải thiện và có thể nhờ thăng chức mà thu nhập tăng lên. Với những kinh nghiệm có được, bạn cẩn thận hơn với vấn đề liên quan tới tài chính. Bọ Cạp biết cách tiêu xài hợp lý, không gây lãng phí quá nhiều, đủ để duy trì mức sống cơ bản. Với sự hỗ trợ của sao Kim và sao Mộc, mọi việc khá suôn sẻ, thu nhập ổn định, cân bằng hài hòa giữa thu và chi.\n\nĐôi khi Bọ Cạp rơi vào tình huống tiến thoái lưỡng nan, các cặp đôi dễ xảy ra biến cố, nếu không kịp thời nói chuyện thẳng thắn và giải quyết mâu thuẫn, vấn đề sẽ ngày một chồng chất chờ thời điểm bùng nổ, gây ra thiệt hại vô cùng lớn. Cả hai đều có cảm giác tổn thương và muốn buông tay, chấp nhận thất bại, dễ rơi vào tình huống tiến thoái lưỡng nan.\n\nNăm 2018 của Bọ Cạp, với những ai độc thân bận rộn với công việc nên không quan tâm quá tới chuyện tình cảm. Bắt đầu từ nửa cuối tháng 8 đổ về sau vận đào hoa mới quay trở lại mang theo cho bạn những cơ hội mới.\n\nTình trạng sức khỏe khá ổn định, nhưng đôi khi xảy ra tai nạn nhỏ, việc bạn cần làm là phải lên kế hoạch đảm bảo sự an toàn, không để cho sự vô ý, vô tứ của mình khiến bản thân gặp họa.</string>
    <string name="bo_cap_text_detail">Tử vi cung Bọ Cạp 2018 (Hổ Cáp, Thiên Yết), trong năm nay sao Diêm Vương tiếp tục ngự trị tại khu vực công việc của Bọ Cạp truyền cảm hứng cho bạn để tiếp tục cố gắng, nỗ lực. Nhờ đó, tình hình học tập cho đến công việc đều có kết quả đáng kể.</string>
    <string name="cu_giai_text">Xem tử vi 12 cung hoàng đạo 2018, năm nay do sự thay đổi lớn quỹ đạo của Mặt Trăng, nên tâm thế của Cự Giải không ổn định, tâm trạng thất thường. Dù không có việc gì xảy ra chòm sao này vẫn cảm thấy phiền lòng nhưng không thể giải thích được lý do vì sao.\n\nNăm 2018 của Cự Giải sẽ trải qua nhiều giai đoạn căng thẳng. Nhưng bù lại, nhờ tác động của Mặt Trời và sao Kim, sự nghiệp và tài chính của bạn bước vào thời kỳ cao điểm. Đi kèm với đó là những ảnh hưởng tiêu cực của tiểu nhân vì ghen tị thành công của bạn mà họ sinh ra ghen ghét, đặt điều, gây trở ngại. Trong tình huống này, Cự Giải nên khiêm tốn, tùy thuộc vào hoàn cảnh mà xử lý cho phù hợp vì với những ai quá đáng quá thì bạn vẫn nên đáp trả chứ không nên im lặng vì mong rằng dĩ hòa vi quý.\n\nThời điểm từ giữa năm cho tới cuối năm do tác động của nhiều hành tinh khác nhau tạo nên quá nhiều biến động, mọi sự đều ngoài tầm kiểm soát của Cự Giải. Bạn phải đối mặt với những thách thức mới và cơ hội, nghề nghiệp, tình yêu, sức khỏe sẽ bước vào giai đoạn cần phải sửa đổi. Bạn sẽ nhận được rất nhiều góp ý và nhận xét từ mọi người ảnh hưởng đến quyết định của bạn. Nếu gặp được người giỏi trong các lĩnh vực này, tức là bạn có trong tay chìa khóa mở cánh cửa thành công, nếu không bạn sẽ đối mặt với nhiều rắc rối.\n\nCuối năm 2018, cung Cự Giải suy nghĩ rất nhiều và bạn nhận được những đáp án rất đáng kinh ngạc khiến bạn phải cố gắng rất nhiều để bản thân có thể đối mặt với thực tế.\n\nThực ra, bạn không cần phải lãng phí thời gian nghĩ ngợi nhiều, hãy để mọi thứ diễn ra tự nhiên vì bạn cần trải qua những thăng trầm như thế bạn mới trưởng thành hơn. Khoảng cách giữa thực tế và tưởng tượng chỉ có bạn mới thực sự đo lường được. Bất kể kết quả năm nay có ra sao thì vẫn can đảm để đối mặt với thách thức và nhờ đó những thứ được xem là bất khả thi cuối cùng sẽ trở thành có thể.</string>
    <string name="su_tu_text">Tử vi cung Sư Tử 2018, mặc chòm sao này sẽ phải đối mặt với nhiều khó khăn nhưng bù lại hứa hẹn một năm kết quả tốt đẹp với những bất ngờ thú vị. Trong công việc, Mặt Trời ảnh hưởng tới thái độ làm việc của bạn, thêm vào đó với những thay đổi trong quỹ đạo của Mặt Trời, khoảng cách giữa mục tiêu và thực tế sẽ thu hẹp lại. Tháng 3, 4 và 8 là những tháng tốt nhất để phát triển công việc kinh doanh, lúc này bạn cũng đỡ bận rộn hơn và có thể tìm cách để điều chỉnh tốc độ làm việc theo hướng hiệu quả hơn.\n\nTử vi 12 cung hoàng đạo năm 2018, tình hình tài chính năm nay có nhiều thăng trầm, tiền đến rồi lại đi và chỉ ổn định trong nửa đầu năm. Có những người, ở thời điểm đầu năm mới thu nhập tăng gấp đôi, nhưng đối với những Sư Tử đang có ý định kết hôn đang chịu áp lực kinh tế tương đối lớn. May mắn về tiền bạc sẽ tới trong tháng 11 khi nguồn tiền thu vào rất dễ dàng, tuy nhiên thời điểm cuối năm, chi tiêu tăng vượt trội, nếu bạn không thực hiện quản lý tài chính tốt, có thể bạn sẽ tiêu đến cả tiền tiết kiệm.\n\nNhững ai còn độc thân không lo lắng khi có rất nhiều đối tượng theo đuổi, tuy nhiên, rất khó có thể tìm được một nửa lý tưởng. Bạn không nên suy nghĩ nhiều, bởi vì họ có thể xuất hiện trong khoảng thời gian này nhưng khá mờ nhạt nên bạn tưởng như không có cảm xúc với người này. \n\nBên cạnh đó, một số Sư Tử thậm chí thích che giấu mối quan hệ của mình, tuyên bố rằng vẫn độc thân, để được có thêm cơ hội tìm kiếm thêm đối tượng phù hợp cho mình.\n\nVề mặt sức khỏe, do ảnh hưởng quỹ đạo di chuyển của Mặt Trời, bạn có khả năng bị bệnh, hơn nữa, năm nay Sư Tử đã dành rất nhiều năng lượng cho công việc và học tập, không có nhiều thời gian để chơi thể thao, rèn luyện sức khỏe, toàn bộ tinh thần và tình trạng thể chất không được tốt. Theo thời gian, bạn gặp rất nhiều vấn đề như thường xuyên mệt mỏi, ốm đau nhiều hơn. Vì thế, nếu bạn tiếp tục lơ là không chăm sóc cơ thể, bệnh tật có thể kéo dài, khó chữa khỏi.\n\nĐối với việc học tập, Sư Tử có tiến bộ nếu có thái độ đúng đắn và chú tâm việc điều chỉnh chương trình học tập. Hơn nữa, nếu phát huy được khả năng giao tiếp, bạn có khả năng để nâng cao hiệu suất cũng như kết quả học tập. Thời điểm tháng 7 và 8 bạn gặp vấn đề liên quan tới việc học, để làm chủ nhịp điệu nhớ phải tuân theo những yêu cầu có sẵn nếu đi chệch hướng sẽ khiến kết quả học hành giảm mạnh.</string>
    <string name="su_tu_title1">Sư Tử - Leo\n(23/7 - 22/8)</string>
    <string name="bao_binh_title1">Bảo Bình - Aquarius\n(21/1 - 18/2) </string>
</resources>