<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    android:id="@+id/noidung1"
    tools:context=".NoiDung1">

    <ImageView
        android:id="@+id/im_ct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/im_detail"
        android:contentDescription="@string/todo"
        />

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/im_ct"
        android:layout_marginTop="-40dp"
        android:src="@drawable/ic_su_tu"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tx_daude"
        android:layout_height="wrap_content"
        android:text="@string/su_tu_title1"
        android:textSize="20sp"
        android:textColor="@color/yellow"
        android:gravity="center"
        android:layout_alignTop="@+id/im_ct"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="301dp"
        android:layout_height="482dp"
        android:layout_below="@+id/tx_daude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:text="@string/su_tu_text"
        android:textColor="@color/white"
        android:textSize="14sp" />
</RelativeLayout>